tests/ui/cast/cast-to-dyn-any.stderr
error[E0605]: non-primitive cast: `i32` as `&(dyn Any + 'static)`
  --> $DIR/cast-to-dyn-any.rs:3:5
   |
LL |     0 as &dyn std::any::Any;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     &0 as &dyn std::any::Any;
   |     +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
